# aviutl-plugin-dumper

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
src/: aviutl_plugin_dumper.cpp  encoding.hpp  manifest.manifest  plugin_info.hpp  version.hpp
